--- a/gak-stairs.html
+++ b/gak-stairs.html
@@ -49,8 +49,8 @@
     </div>
   </div>
   <div class="junction">
-    <a class="back" href="./Today-School.html">← Today School</a>
-    <a class="next" href="./Newa.html">Newa Nutrition →</a>
+    <a class="back" href="./today-school.html">← Today School</a>
+    <a class="next" href="./newa.html">Newa Nutrition →</a>
   </div>
   <div class="project-image"><img class="gak-stairs" src="./images/gak_presentation.jpg" alt="gak-stairs"></div>
 </body>
