--- a/ipsum.html
+++ b/ipsum.html
@@ -49,8 +49,8 @@
     </div>
   </div>
   <div class="junction">
-    <a class="back" href="./Sport-Open.html">← Sport Open</a>
-    <a class="next" href="./Today-School.html">Today School →</a>
+    <a class="back" href="./sport-open.html">← Sport Open</a>
+    <a class="next" href="./today-school.html">Today School →</a>
   </div>
   <div class="project-image"><img class="ipsum" src="./images/ipsum_presentation.jpg" alt="ipsum"></div>
 </body>
