--- a/newa.html
+++ b/newa.html
@@ -49,8 +49,8 @@
     </div>
   </div>
   <div class="junction">
-    <a class="back" href="./Gak-stairs.html">← Gak stairs</a>
-    <a class="next" href="./Sport-Open.html">Sport Open →</a>
+    <a class="back" href="./gak-stairs.html">← Gak stairs</a>
+    <a class="next" href="./sport-open.html">Sport Open →</a>
   </div>
   <div class="project-image"><img class="newa" src="./images/newa_presentation.jpg" alt="newa"></div>
 </body>
