--- a/sport-open.html
+++ b/sport-open.html
@@ -49,8 +49,8 @@
     </div>
   </div>
   <div class="junction">
-    <a class="back" href="./Newa.html">← Newa Nutrition</a>
-    <a class="next" href="./Ipsum.html">Ipsum →</a>
+    <a class="back" href="./newa.html">← Newa Nutrition</a>
+    <a class="next" href="./ipsum.html">Ipsum →</a>
   </div>
   <div class="project-image"><img class="sport-open" src="./images/sport_presentation.jpg" alt="sport-open"></div>
 </body>
