--- a/today-school.html
+++ b/today-school.html
@@ -50,7 +50,7 @@
   </div>
   <div class="junction">
     <a class="back" href="./ipsum.html">← Ipsum </a>
-    <a class="next" href="./Gak-stairs.html">Gak stairs →</a>
+    <a class="next" href="./gak-stairs.html">Gak stairs →</a>
   </div>
   <div class="project-image"><img class="today" src="./images/today_presentation.jpg" alt="today-school"></div>
 </body>
