fix circle animation

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     const checkVisible = elm => {
       var rect = elm.getBoundingClientRect();
       var viewHeight = Math.max(document.documentElement.clientHeight, window.innerHeight);
-      return !(rect.bottom < 0 || rect.top - viewHeight >= 0);
+      return !(rect.bottom - 200 < 0 || rect.top + 200 - viewHeight >= 0);
     }
 
     const circles = () => {
